# jobrabbit

./: .dockerignore  .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  Dockerfile.dev  LICENSE  Makefile  README.md  README.pt-BR.md  SECURITY.md  build.rs  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-06-30-campos-identidade-inhire.md  2026-06-30-limpar-dados-execucao.md
docs/superpowers/specs/: 2026-06-30-campos-identidade-inhire-design.md  2026-06-30-limpar-dados-execucao-design.md
scripts/: build-release.sh
src/: ats.rs  config.rs  event.rs  export.rs  import.rs  locale.rs  main.rs
src/agent/: mod.rs  prompts.rs  protocol.rs  pty.rs  stream.rs
src/core/: actions.rs  doctor.rs  mod.rs  persist.rs  sanitize.rs
src/db/: mod.rs  models.rs  schema.sql
src/platform/: idle.rs  mod.rs  notify.rs  secrets.rs
src/playbooks/en/: generic.md  greenhouse.md  gupy.md  inhire.md  lever.md  linkedin.md  workday.md
src/playbooks/pt-br/: generic.md  greenhouse.md  gupy.md  inhire.md  lever.md  linkedin.md  workday.md
src/tui/: atstab.rs  config.rs  dashboard.rs  editor.rs  feedback.rs  mod.rs  pending.rs  profile.rs  sessionlog.rs
src/web/: mod.rs
tests/fixtures/: stream-json-hello.ndjson  stream-json-protocol.ndjson
web-ui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
web-ui/src/: App.tsx  api.ts  events.tsx  hooks.ts  i18n.ts  index.css  main.tsx  motion.ts  nav.tsx  theme.tsx  toast.tsx  ui.tsx
web-ui/src/locales/: en.json  pt-BR.json
web-ui/src/pages/: Applications.tsx  Ats.tsx  Config.tsx  Dashboard.tsx  Doctor.tsx  Feedback.tsx  Identity.tsx  Pending.tsx  Profile.tsx  Session.tsx
